crates/obj-rs/tests/derive_compile_fail/bad_field_index_kind.rs
use serde::{Deserialize, Serialize};

#[derive(Serialize, Deserialize, obj::Document)]
struct BadKind {
    #[obj(index = bogus)]
    field: u32,
}

fn main() {}
